--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "html_coding_template",
   "version": "0.0.1",
   "scripts": {
-    "server": "http-server dist -c-1 -o",
+    "server": "http-server dist -c-1",
     "sass": "sass",
     "sass-watch": "sass --watch scss:dist/css --style=expanded --no-source-map",
     "pug": "pug pug/pages -o dist -P",
     "pug-watch": "pug -w pug/pages -o dist -P",
-    "dev": "run-p server sass-watch pug-watch"
+    "tsc": "tsc",
+    "tsc-watch": "tsc -w -p tsconfig.json",
+    "dev": "run-p server sass-watch pug-watch tsc-watch"
   },
   "dependencies": {
-    "reset-css": "^5.0.2",
-    "sass": "^1.77.8"
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.3",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "sass": "^1.77.8",
+    "typescript": "^5.6.2"
   }
 }
